Update Dockerfile w/ seqtk
added seqtk

--- a/docker-baseimage/Dockerfile
+++ b/docker-baseimage/Dockerfile
@@ -143,3 +143,6 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
     unzip awscliv2.zip && ./aws/install
 
 RUN apt-get install -y --no-install-recommends groff
+
+RUN git clone https://github.com/lh3/seqtk.git && cd seqtk && make && mv seqtk /usr/local/bin/
+
