--- a/docker-vep/Dockerfile
+++ b/docker-vep/Dockerfile
@@ -1,33 +1,22 @@
-FROM dhspence/docker-genomic-analysis:latest
-MAINTAINER David H. Spencer <dspencer@wustl.edu>
+FROM ensemblorg/ensembl-vep:release_105.0
+MAINTAINER David Spencer <dspencer@wustl.edu and Feiyu Du <fdu@wustl.edu>
 
-LABEL description="Container with VEP"
+LABEL vep105 and htslib1.9 image
 
+RUN mkdir -p /opt/lib/perl/VEP/Plugins
+COPY Downstream.pm /opt/lib/perl/VEP/Plugins/Downstream.pm
 
-########
-#VEP 93#
-########
-
-RUN cpan install DBI && cpan install Module::Build.pm
-
-RUN mkdir /opt/vep/
-WORKDIR /opt/vep
-
-RUN git clone https://github.com/Ensembl/ensembl-vep.git
-WORKDIR /opt/vep/ensembl-vep
-RUN git checkout postreleasefix/93
-
-RUN perl INSTALL.pl --NO_UPDATE
-
-RUN mkdir -p /opt/lib/perl/VEP/Plugins && chmod a+wrx /opt/lib/perl/VEP/Plugins && \
-    git clone https://github.com/Ensembl/VEP_plugins.git && \
-    mv VEP_plugins/* /opt/lib/perl/VEP/Plugins/
-
-COPY Wildtype.pm /opt/lib/perl/VEP/Plugins/Wildtype.pm
-
-WORKDIR /
-RUN ln -s /opt/vep/ensembl-vep/vep /usr/bin/variant_effect_predictor.pl
-
-COPY add_annotations_to_table_helper.py /usr/local/bin/add_annotations_to_table_helper.py
-
-RUN chmod a+wrx /usr/local/bin/add_annotations_to_table_helper.py
+################
+#bcftools 1.9#
+################
+ENV BCFTOOLS_INSTALL_DIR=/opt/bcftools
+WORKDIR /tmp
+RUN wget https://github.com/samtools/bcftools/releases/download/1.9/bcftools-1.9.tar.bz2 && \
+    tar --bzip2 -xf bcftools-1.9.tar.bz2 && \
+    cd /tmp/bcftools-1.9 && \
+    make prefix=$BCFTOOLS_INSTALL_DIR && \
+    make prefix=$BCFTOOLS_INSTALL_DIR install && \
+    ln -s /opt/bcftools/bin/* /usr/local/bin/ && \
+    cd / && \
+    rm -rf /tmp/bcftools-1.9
+    
