--- a/docker-vep/Dockerfile
+++ b/docker-vep/Dockerfile
@@ -1,22 +1,57 @@
 FROM ensemblorg/ensembl-vep:release_105.0
-MAINTAINER David Spencer <dspencer@wustl.edu and Feiyu Du <fdu@wustl.edu>
 
 LABEL vep105 and htslib1.9 image
 
+USER root
 RUN mkdir -p /opt/lib/perl/VEP/Plugins
 COPY Downstream.pm /opt/lib/perl/VEP/Plugins/Downstream.pm
 
+RUN apt-get update && apt-get install wget
+
+##############
+#HTSlib 1.18#
+##############
+ENV HTSLIB_INSTALL_DIR=/opt/htslib
+
+WORKDIR /tmp
+RUN wget https://github.com/samtools/htslib/releases/download/1.18/htslib-1.18.tar.bz2 && \
+    tar --bzip2 -xvf htslib-1.18.tar.bz2 && \
+    cd /tmp/htslib-1.18 && \
+    ./configure  --enable-plugins --prefix=$HTSLIB_INSTALL_DIR && \
+    make && \
+    make install && \
+    cp $HTSLIB_INSTALL_DIR/lib/libhts.so* /usr/lib/ && \
+    ln -s $HTSLIB_INSTALL_DIR/bin/tabix /usr/bin/tabix && \
+    ln -s $HTSLIB_INSTALL_DIR/bin/bgzip /usr/bin/bgzip && \
+    rm -Rf /tmp/htslib-1.18
+
 ################
-#bcftools 1.9#
+#Samtools 1.18#
+################
+ENV SAMTOOLS_INSTALL_DIR=/opt/samtools
+
+WORKDIR /tmp
+RUN wget https://github.com/samtools/samtools/releases/download/1.18/samtools-1.18.tar.bz2 && \
+    tar --bzip2 -xf samtools-1.18.tar.bz2 && \
+    cd /tmp/samtools-1.18 && \
+    ./configure --with-htslib=$HTSLIB_INSTALL_DIR --prefix=$SAMTOOLS_INSTALL_DIR && \
+    make && \
+    make install && \
+    ln -s /opt/samtools/bin/* /usr/local/bin/ && \
+    cd / && \
+    rm -rf /tmp/samtools-1.18
+
+################
+#bcftools 1.18#
 ################
 ENV BCFTOOLS_INSTALL_DIR=/opt/bcftools
 WORKDIR /tmp
-RUN wget https://github.com/samtools/bcftools/releases/download/1.9/bcftools-1.9.tar.bz2 && \
-    tar --bzip2 -xf bcftools-1.9.tar.bz2 && \
-    cd /tmp/bcftools-1.9 && \
+RUN wget https://github.com/samtools/bcftools/releases/download/1.18/bcftools-1.18.tar.bz2 && \
+    tar --bzip2 -xf bcftools-1.18.tar.bz2 && \
+    cd /tmp/bcftools-1.18 && \
     make prefix=$BCFTOOLS_INSTALL_DIR && \
     make prefix=$BCFTOOLS_INSTALL_DIR install && \
     ln -s /opt/bcftools/bin/* /usr/local/bin/ && \
     cd / && \
-    rm -rf /tmp/bcftools-1.9
-    
+    rm -rf /tmp/bcftools-1.18
+        
