--- a/docker-dss/Dockerfile
+++ b/docker-dss/Dockerfile
@@ -1,6 +1,6 @@
 FROM ghcr.io/dhslab/docker-baseimage:231101
 MAINTAINER David Spencer <dspencer@wustl.edu>
 
-LABEL Base image with DSS added
+LABEL Base Spencer lab image with DSS added
 
 RUN /usr/local/bin/Rscript -e 'install.packages("BiocManager"); BiocManager::install("DSS")'
