added ichor docker

--- a/docker-ichor/Dockerfile
+++ b/docker-ichor/Dockerfile
@@ -1,35 +1,70 @@
-FROM dhspence/docker-baseimage:031822
+FROM ubuntu:20.04
 
-MAINTAINER David Spencer <dspencer@wustl.edu>
+LABEL description="Container with ichorCNA"
 
-LABEL Image for basic ad-hoc bioinformatic analyses
+ENV DEBIAN_FRONTEND=noninteractive
 
-# install hmmcopy
-RUN apt-get update && apt-get install cmake \
-				      build-essential \
-				      fort77 \
-				      xorg-dev \
-				      liblzma-dev  \
-				      libblas-dev \
-				      gfortran \
-				      gcc-multilib \
-				      gobjc++ \
-				      aptitude \
-				      libreadline-dev \
-				      libpcre3 libpcre3-dev --no-install-recommends -y && \
-    cd /opt/ && \
-    git config --global http.sslVerify false && \
-    git clone --recursive https://github.com/shahcompbio/hmmcopy_utils.git && \
-    cd /opt/hmmcopy_utils && \
-    cmake . && \
-    make && \
-    cp bin/* /usr/local/bin/
+RUN apt-get update && apt-get install -y --no-install-recommends locales && \
+    echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && \
+    locale-gen en_US.UTF-8 && \
+    LC_ALL=en_US.UTF-8 && \
+    LANG=en_US.UTF-8 && \
+    /usr/sbin/update-locale LANG=en_US.UTF-8 && \
+    TERM=xterm
 
-# install R
+RUN apt-get update -y && apt-get install -y --no-install-recommends \
+    build-essential \
+    cmake \
+    git \
+    wget \
+    autoconf \
+    zlib1g-dev \
+    fort77 \
+    liblzma-dev  \
+    libblas-dev \
+    gfortran \
+    aptitude \
+    libreadline-dev \
+    libpcre3 \
+    libpcre3-dev \
+    curl \
+    g++ \
+    git \
+    less \
+    libcurl4-openssl-dev \
+    libssl-dev \
+    libxml2-dev \
+    make \
+    ncurses-dev \
+    pkg-config \
+    unzip \
+    libbz2-dev \
+    ca-certificates \
+    file \
+    libbz2-1.0 \
+    libopenblas-dev \
+    liblzma5 \
+    locales \
+    zlib1g \
+    libbz2-dev \
+    libcairo2-dev \
+    libcurl4-openssl-dev \
+    libpango1.0-dev \
+    libicu-dev \
+    libreadline-dev \
+    liblzma-dev \
+    libxt-dev \
+    xvfb \
+    zlib1g-dev \
+    libnss-sss
+
+RUN apt-get update && \
+    apt-get install -y 
+		      
+############################
+# R, bioconductor packages #
 ARG R_VERSION
-ARG BUILD_DATE
-ENV BUILD_DATE 2017-06-20
-ENV R_VERSION=${R_VERSION:-3.5.0}
+ENV R_VERSION=${R_VERSION:-3.6.0}
 RUN cd /tmp/ && \
     ## Download source code
     curl -O https://cran.r-project.org/src/base/R-3/R-${R_VERSION}.tar.gz && \
@@ -55,7 +90,6 @@ RUN cd /tmp/ && \
                --with-readline \
                --with-blas="-lopenblas" \
                --disable-nls \
-	       --with-x=no \
                --without-recommended-packages && \
     ## Build and install
     make && \
@@ -68,24 +102,25 @@ RUN cd /tmp/ && \
     chmod g+wx /usr/local/lib/R/site-library && \
     ## Fix library path
     echo "R_LIBS_USER='/usr/local/lib/R/site-library'" >> /usr/local/lib/R/etc/Renviron && \
-    echo "R_LIBS=\${R_LIBS-'/usr/local/lib/R/site-library:/usr/local/lib/R/library:/usr/lib/R/library'}" >> /usr/local/lib/R/etc/Renviron && \
-    ## Use littler installation scripts
-    Rscript -e "install.packages(c('littler', 'docopt'))" && \
-    ln -s /usr/local/lib/R/site-library/littler/examples/install2.r /usr/local/bin/install2.r && \
-    ln -s /usr/local/lib/R/site-library/littler/examples/installGithub.r /usr/local/bin/installGithub.r && \
-    ln -s /usr/local/lib/R/site-library/littler/bin/r /usr/local/bin/r
+    echo "R_LIBS=\${R_LIBS-'/usr/local/lib/R/site-library:/usr/local/lib/R/library:/usr/lib/R/library'}" >> /usr/local/lib/R/etc/Renviron
 
-RUN Rscript -e "source('https://bioconductor.org/biocLite.R'); biocLite('HMMcopy'); biocLite('GenomeInfoDb'); install.packages(c('devtools','optparse'))"
-RUN Rscript --default-packages=devtools -e "install_github('broadinstitute/ichorCNA', '--no-docs')"
+############
+# ichorCNA #
+############
 
-RUN cd /opt/ && wget https://github.com/broadinstitute/ichorCNA/archive/master.zip && \
-       unzip master.zip && mv ichorCNA-master/scripts/*.R /usr/local/bin/ && rm -Rf master.zip ichorCNA-master
-       
+WORKDIR /usr/local/bin
+RUN git clone https://github.com/GavinHaLab/ichorCNA.git
+RUN cd ichorCNA && git checkout -b bugfix_rollback b2bbce0a9997f31733f0f0ea4278cfba937ded41
+RUN Rscript -e "install.packages(c('plyr', 'optparse','BiocManager', 'foreach', 'doMC')); BiocManager::install(c('HMMcopy','GenomeInfoDb','GenomicRanges'))"
+RUN R CMD INSTALL ichorCNA
+
 ## Clean up
 RUN cd / && \
-    rm -rf /tmp/* && \
-    apt-get autoremove -y && \
-    apt-get autoclean -y && \
-    rm -rf /var/lib/apt/lists/* && \
-    apt-get clean
+   rm -rf /tmp/* && \
+   apt-get autoremove -y && \
+   apt-get autoclean -y && \
+   rm -rf /var/lib/apt/lists/* && \
+   apt-get clean && \
+   rm -f /opt/*.bz2 /opt/*.gz
 
+RUN rm -f /usr/local/lib/R/site-library/ichorCNA/extdata/*.rds /usr/local/lib/R/site-library/ichorCNA/extdata/MBC* /usr/local/lib/R/site-library/ichorCNA/extdata/*10kb* /usr/local/lib/R/site-library/ichorCNA/extdata/*50kb* /usr/local/lib/R/site-library/ichorCNA/extdata/*1000kb*
