--- a/docker-ichor/Dockerfile
+++ b/docker-ichor/Dockerfile
@@ -98,8 +98,8 @@ RUN cd /tmp/ && \
     chown root:staff /usr/local/lib/R/site-library && \
     chmod g+wx /usr/local/lib/R/site-library && \
     ## Fix library path
-    echo "R_LIBS_USER='/usr/local/lib/R/site-library'" >> /usr/local/lib/R/etc/Renviron && \
-    echo "R_LIBS=\${R_LIBS-'/usr/local/lib/R/site-library:/usr/local/lib/R/library:/usr/lib/R/library'}" >> /usr/local/lib/R/etc/Renviron
+    echo "R_LIBS_USER='/usr/local/lib/R/site-library'" >> $R_HOME/etc/Renviron && \
+    echo "R_LIBS=\${R_LIBS-'/usr/local/lib/R/site-library:/usr/local/lib/R/library:/usr/lib/R/library'}" >> $R_HOME/etc/Renviron
 
 ############
 # ichorCNA #
