--- a/docker-ichor/Dockerfile
+++ b/docker-ichor/Dockerfile
@@ -93,13 +93,14 @@ RUN cd /tmp/ && \
     make && \
     make install && \
     ## Add a default CRAN mirror
+    echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl')" >> $R_HOME/etc/Rprofile.site && \
     ## Add a library directory (for user-installed packages)
     mkdir -p /usr/local/lib/R/site-library && \
     chown root:staff /usr/local/lib/R/site-library && \
     chmod g+wx /usr/local/lib/R/site-library && \
     ## Fix library path
     echo "R_LIBS_USER='/usr/local/lib/R/site-library'" >> $R_HOME/etc/Renviron && \
-    echo "R_LIBS=\${R_LIBS-'/usr/local/lib/R/site-library:/usr/local/lib/R/library:/usr/lib/R/library'}" >> $R_HOME/etc/Renviron
+    echo "R_LIBS=\${R_LIBS-'/usr/local/lib/R/site-library:/usr/local/lib/R/library:/usr/lib/R/library'}" >> $R_HOME/R/etc/Renviron
 
 ############
 # ichorCNA #
