Update push_docker.yaml to push latest

--- a/.github/workflows/push_docker.yaml
+++ b/.github/workflows/push_docker.yaml
@@ -65,4 +65,6 @@ jobs:
     - name: Build and Push Docker image
       run: |
         docker build ./${{ matrix.container-name }} --tag ghcr.io/dhslab/${{ matrix.container-name }}:$DATE
+        docker tag ghcr.io/dhslab/${{ matrix.container-name }}:$DATE ghcr.io/dhslab/${{ matrix.container-name }}:latest
         docker push ghcr.io/dhslab/${{ matrix.container-name }}:$DATE
+        docker push ghcr.io/dhslab/${{ matrix.container-name }}:latest
