--- a/docker-cleutils/Dockerfile
+++ b/docker-cleutils/Dockerfile
@@ -51,6 +51,7 @@ RUN pip install numpy && \
     pip install pandas && \
     pip install pysam && \
     pip install pyranges && \
+    pip install scipy && \
     pip install biopython
 
 RUN ln -s $(which python3) /usr/local/bin/python
