Update Dockerfile w/ sqalchemy

--- a/docker-baseimage/Dockerfile
+++ b/docker-baseimage/Dockerfile
@@ -68,7 +68,8 @@ RUN pip install numpy && \
     pip install nf-core && \
     pip install boto3 && \
     pip install gget && \
-    pip install openpyxl
+    pip install openpyxl && \
+    pip install SQLAlchemy
 
 #set timezone to CDT
 RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
