--- a/docker-mosdepth/Dockerfile
+++ b/docker-mosdepth/Dockerfile
@@ -1,73 +1,8 @@
-FROM ubuntu:20.04
-MAINTAINER David Spencer <dspencer@wustl.edu>
+FROM ghcr.io/dhslab/docker-htslib:latest
 
 LABEL Basic image with htslib, samtools and mosdepth
 
 ENV DEBIAN_FRONTEND=noninteractive
-
-RUN apt-get update && apt-get install -y --no-install-recommends locales && \
-    echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && \
-    locale-gen en_US.UTF-8 && \
-    LC_ALL=en_US.UTF-8 && \
-    LANG=en_US.UTF-8 && \
-    /usr/sbin/update-locale LANG=en_US.UTF-8 && \
-    TERM=xterm
-
-RUN apt-get update -y && apt-get install -y --no-install-recommends \
-    build-essential \
-    g++ \
-    bzip2 \
-    curl \
-    wget \
-    openssh-client \
-    tzdata \
-    libnss-sss \
-    zlib1g-dev \
-    libbz2-dev \
-    liblzma-dev \
-    gawk \
-    grep \
-    evince \
-    less \
-    && apt-get clean all
-
-#set timezone to CDT
-RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
-RUN echo "America/Chicago" > /etc/timezone
-RUN dpkg-reconfigure --frontend noninteractive tzdata
-
-##############
-#HTSlib 1.18#
-##############
-ENV HTSLIB_INSTALL_DIR=/opt/htslib
-
-WORKDIR /tmp
-RUN wget --no-check-certificate https://github.com/samtools/htslib/releases/download/1.18/htslib-1.18.tar.bz2 && \
-    tar --bzip2 -xvf htslib-1.18.tar.bz2 && \
-    cd /tmp/htslib-1.18 && \
-    ./configure  --enable-plugins --prefix=$HTSLIB_INSTALL_DIR && \
-    make && \
-    make install && \
-    cp $HTSLIB_INSTALL_DIR/lib/libhts.so* /usr/lib/ && \
-    ln -s $HTSLIB_INSTALL_DIR/bin/tabix /usr/bin/tabix && \
-    ln -s $HTSLIB_INSTALL_DIR/bin/bgzip /usr/bin/bgzip && \
-    rm -Rf /tmp/htslib-1.18
-
-################
-#Samtools 1.18#
-################
-ENV SAMTOOLS_INSTALL_DIR=/opt/samtools
-
-WORKDIR /tmp
-RUN wget --no-check-certificate https://github.com/samtools/samtools/releases/download/1.18/samtools-1.18.tar.bz2 && \
-    tar --bzip2 -xf samtools-1.18.tar.bz2 && \
-    cd /tmp/samtools-1.18 && \
-    ./configure --with-htslib=$HTSLIB_INSTALL_DIR --prefix=$SAMTOOLS_INSTALL_DIR && \
-    make && \
-    make install && \
-    ln -s /opt/samtools/bin/* /usr/local/bin/ && \
-    cd / && \
-    rm -rf /tmp/samtools-1.18
 
 ################
 # mosdepth 0.3.6
