--- a/docker-whatshap/Dockerfile
+++ b/docker-whatshap/Dockerfile
@@ -2,7 +2,7 @@ FROM ghcr.io/dhslab/docker-python3:latest
 
 LABEL Image with whatshap
 
-#some basic tools
+# update as needed
 RUN apt-get update -y && apt-get install -y --no-install-recommends
 
 RUN pip3 install whatshap
