added samtools to whatshap

--- a/docker-whatshap/Dockerfile
+++ b/docker-whatshap/Dockerfile
@@ -3,7 +3,7 @@ FROM ghcr.io/dhslab/docker-python3:latest
 LABEL Image with htslib, samtools and whatshap
 
 # update as needed
-RUN apt-get update -y && apt-get install -y --no-install-recommends
+RUN apt-get update -y && apt-get install -y --no-install-recommends wget
 
 ##############
 #HTSlib 1.18#
