Update Dockerfile with fitz

--- a/docker-baseimage/Dockerfile
+++ b/docker-baseimage/Dockerfile
@@ -70,7 +70,7 @@ RUN pip install numpy && \
     pip install gget && \
     pip install openpyxl && \
     pip install SQLAlchemy && \
-    pip install PyPDF2
+    pip install pymupdf
 
 #set timezone to CDT
 RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
