updated baseimage again

--- a/docker-baseimage/Dockerfile
+++ b/docker-baseimage/Dockerfile
@@ -71,9 +71,9 @@ RUN pip install numpy && \
     pip install pymupdf
 
 RUN wget https://github.com/fls-bioinformatics-core/GFFUtils/archive/refs/tags/v0.12.0.tar.gz && \
-    tar xzf GFFUtils-0.10.3.tar.gz && \
-    pip install -r ./GFFUtils-0.10.3/requirements.txt && \
-    pip install ./GFFUtils-0.10.3/
+    tar xzf v0.12.0.tar.gz && \
+    pip install -r ./GFFUtils-0.12.0/requirements.txt && \
+    pip install ./GFFUtils-0.12.0/
     
 #set timezone to CDT
 RUN ln -sf /usr/share/zoneinfo/America/Chicago /etc/localtime
